# node-id3-rs

./: .npmignore  .travis.yml  README.md  package-lock.json  package.json
native/: Cargo.toml
native/src/: lib.rs
