[package]
name = "id3-rs"
version = "0.1.0"
authors = ["schneefux"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "id3_rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
id3 = "0.5.0"
base64 = "0.12.0"
